<resources>
    <string name="app_name">MovileNext3_Android_MarceloMatsumto</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_navigation_movies">Movies</string>
    <string name="bottom_navigation_favorites">Favorites</string>
    <string name="bottom_navigation_tickets">Tickets</string>

    <string name="movie_year">Year:</string>
    <string name="movie_genre">Genre:</string>
    <string name="movie_runtime">Runtime:</string>
    <string name="movie_director">Director:</string>
    <string name="movie_writer">Writer:</string>
    <string name="movie_plot">Plot:</string>
    <string name="error_api_connection_error">Connection error</string>
    <string name="error_api_no_result">No movie found</string>
    <string name="error_load_movie_detail">Could not load movie detail</string>
    <string name="error_load_movie_list">Could not load movie list</string>
    <string name="confirm_ticket_amount">Confirm ticket amount</string>
    <string name="tickets">Tickets</string>
    <string name="search_text_too_short">Type at least the 3 characters</string>
</resources>
